--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Show me more!</a>
+      </br><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Show me more!</a>
     </article>
   {% endfor %}
 </div>
