--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         {{ post.excerpt }}
       </div>
 
-      </br><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Show me more!</a>
+      </br><a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read this article</a>
     </article>
   {% endfor %}
 </div>
