--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
         </br>{{ post.excerpt }}
       </div>
 
-      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
+      <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Show me more!</a>
     </article>
   {% endfor %}
 </div>
